flask-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 723619976108.dkr.ecr.us-east-1.amazonaws.com/proj8-eks-app:latest   # replace later after CI/CD
        ports:
        - containerPort: 5000
