flask-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - port: 80
    targetPort: 5000
